# cc-toolgate

./: Cargo.toml  README.md  deny.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  lint-pr.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md
docs/adr/: 0001-msrv-match-deps.md
src/: config.rs
src/commands/tools/: cargo.rs  gh.rs  git.rs  kubectl.rs
src/eval/: context.rs  mod.rs
src/parse/: shell.rs
tests/: integration.rs
