[package]
name = "cc-toolgate"
version = "0.6.0"
edition = "2024"
description = "PreToolUse hook for Claude Code that gates Bash commands with compound-command-aware validation"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1"
log = "0.4"
simplelog = "0.12"
toml = "0.8"
tree-sitter = "0.26"
tree-sitter-bash = "0.25"
shellexpand = "3.1.2"

[profile.release]
strip = true
lto = true
